[package]
name = "lls"
authors = ["qDread-dev"]
description = "Linux like ls for windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
clap = {version = "4.4.8", features = ["derive"]}