[package]
name = "lls"
authors = ["qDread-dev"]
description = "Linux like ls for windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
clap = {version = "4.4.8", features = ["derive"]}
term_size = "0.3.2"
json = "0.12.4"
regex = "1.10.2"
rayon = "1.5.1"
prettytable-rs = "0.10.0"